unpackaged/main/default/objects/Service__c/fields/Absconding_Assessed_Level__c.field-meta.xml
<CustomField>
    <fullName>Absconding_Assessed_Level__c</fullName>
    <label>Absconding (Assessed Level)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High - Frequent, Intense, Enduring</fullName>
            </value>
            <value>
                <fullName>Low - Mild, Limited, Frequency and Intensity</fullName>
            </value>
            <value>
                <fullName>Medium - Frequent, Limitedintensity and Duration</fullName>
            </value>
            <value>
                <fullName>No Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>