unpackaged/main/default/objects/Service__c/fields/Any_Breast_Enlargement__c.field-meta.xml
<CustomField>
    <fullName>Any_Breast_Enlargement__c</fullName>
    <label>Any Breast Enlargement?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>