unpackaged/main/default/objects/Service__c/fields/Any_involuntary_hyperkinetic_movements__c.field-meta.xml
<CustomField>
    <fullName>Any_involuntary_hyperkinetic_movements__c</fullName>
    <inlineHelpText>For Example: Dyskinesia</inlineHelpText>
    <label>Any involuntary hyperkinetic movements?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>