unpackaged/main/default/objects/Service__c/fields/Any_Loss_of_Sexual_Function_or_Desire__c.field-meta.xml
<CustomField>
    <fullName>Any_Loss_of_Sexual_Function_or_Desire__c</fullName>
    <label>Any Loss of Sexual Function or Desire?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>