unpackaged/main/default/objects/Service__c/fields/Any_Milk_Leakage_From_Your_Breast__c.field-meta.xml
<CustomField>
    <fullName>Any_Milk_Leakage_From_Your_Breast__c</fullName>
    <label>Any Milk Leakage From Your Breast?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>