unpackaged/main/default/objects/Service__c/fields/Any_muscular_stifness_or_rigidity__c.field-meta.xml
<CustomField>
    <fullName>Any_muscular_stifness_or_rigidity__c</fullName>
    <inlineHelpText>For Example:  Parkinsonism</inlineHelpText>
    <label>Any muscular stifness or rigidity?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>