unpackaged/main/default/objects/Service__c/fields/Any_muscular_tremors_or_spasms__c.field-meta.xml
<CustomField>
    <fullName>Any_muscular_tremors_or_spasms__c</fullName>
    <inlineHelpText>For Example: Dystonia</inlineHelpText>
    <label>Any muscular tremors or spasms?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>