unpackaged/main/default/objects/Service__c/fields/Any_restlessness_or_agitation__c.field-meta.xml
<CustomField>
    <fullName>Any_restlessness_or_agitation__c</fullName>
    <inlineHelpText>For Example:  Akathisia</inlineHelpText>
    <label>Any restlessness or agitation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>