unpackaged/main/default/objects/Service__c/fields/Are_there_any_Child_Protection_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_Child_Protection_Concerns__c</fullName>
    <label>Are there any Child Protection Concerns?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>