unpackaged/main/default/objects/Service__c/fields/Arm__c.field-meta.xml
<CustomField>
    <fullName>Arm__c</fullName>
    <label>Arm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>