unpackaged/main/default/objects/Service__c/fields/Avg_Diastolic_Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Avg_Diastolic_Blood_Pressure__c</fullName>
    <formula>IF(NOT(ISBLANK(X1st_Blood_Pressure_Diastolic_mmHg__c)) &amp;&amp; NOT(ISBLANK(X2nd_Blood_Pressure_Diastolic_mmHg__c)),(X1st_Blood_Pressure_Diastolic_mmHg__c +X2nd_Blood_Pressure_Diastolic_mmHg__c)/2,
IF(NOT(ISBLANK(X1st_Blood_Pressure_Diastolic_mmHg__c)) &amp;&amp; ISBLANK(X2nd_Blood_Pressure_Diastolic_mmHg__c), X1st_Blood_Pressure_Diastolic_mmHg__c ,0))</formula>
    <label>Avg Diastolic Blood Pressure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>