unpackaged/main/default/objects/Service__c/fields/Avg_Systolic_Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Avg_Systolic_Blood_Pressure__c</fullName>
    <formula>IF(NOT(ISBLANK(Xst_Blood_Pressure_Systolic_mmHg__c  )) &amp;&amp; NOT(ISBLANK(Xnd_Blood_Pressure_Systolic_mmHg__c)),(Xst_Blood_Pressure_Systolic_mmHg__c +Xnd_Blood_Pressure_Systolic_mmHg__c)/2,
IF(NOT(ISBLANK(Xst_Blood_Pressure_Systolic_mmHg__c)) &amp;&amp; ISBLANK(Xnd_Blood_Pressure_Systolic_mmHg__c), Xst_Blood_Pressure_Systolic_mmHg__c ,0))</formula>
    <label>Avg Systolic Blood Pressure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>