unpackaged/main/default/objects/Service__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <label>Background</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>