unpackaged/main/default/objects/Service__c/fields/BMI_kg_m2_Calc__c.field-meta.xml
<CustomField>
    <fullName>BMI_kg_m2_Calc__c</fullName>
    <formula>Weight_kg__c / (Height_m__c * Height_m__c)</formula>
    <label>BMI (kg/m2) (Calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>