unpackaged/main/default/objects/Service__c/fields/BP_Arm_Size_cm__c.field-meta.xml
<CustomField>
    <fullName>BP_Arm_Size_cm__c</fullName>
    <label>BP Arm Size (cm)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>