unpackaged/main/default/objects/Service__c/fields/BPD_Co_Worker_Present__c.field-meta.xml
<CustomField>
    <fullName>BPD_Co_Worker_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BPD Co Worker Present?</label>
    <type>Checkbox</type>
</CustomField>