unpackaged/main/default/objects/Service__c/fields/Cardiovascular_Disease__c.field-meta.xml
<CustomField>
    <fullName>Cardiovascular_Disease__c</fullName>
    <label>Cardiovascular Disease?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>