unpackaged/main/default/objects/Service__c/fields/Children_Under_18_or_Dependent_in_House__c.field-meta.xml
<CustomField>
    <fullName>Children_Under_18_or_Dependent_in_House__c</fullName>
    <label>Children Under 18 or Dependent in House?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>