unpackaged/main/default/objects/Service__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Episode__r.Patient.FirstName+&#39; &#39;+Episode__r.Patient.LastName</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>