unpackaged/main/default/objects/Service__c/fields/Client_No__c.field-meta.xml
<CustomField>
    <fullName>Client_No__c</fullName>
    <formula>Episode__r.Client_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client No</label>
    <type>Text</type>
</CustomField>