unpackaged/main/default/objects/Service__c/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <formula>Episode__r.Client_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Status</label>
    <type>Text</type>
</CustomField>