unpackaged/main/default/objects/Service__c/fields/Contact_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date_Time__c</fullName>
    <label>Contact Date/Time</label>
    <type>DateTime</type>
</CustomField>