unpackaged/main/default/objects/Service__c/fields/Covid19_Related__c.field-meta.xml
<CustomField>
    <fullName>Covid19_Related__c</fullName>
    <label>Covid-19 Related?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>