unpackaged/main/default/objects/Service__c/fields/Diabetes__c.field-meta.xml
<CustomField>
    <fullName>Diabetes__c</fullName>
    <label>Diabetes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>