unpackaged/main/default/objects/Service__c/fields/Episode__c.field-meta.xml
<CustomField>
    <fullName>Episode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Episode</label>
    <referenceTo>ClinicalEncounter</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>