unpackaged/main/default/objects/Service__c/fields/Episode_No__c.field-meta.xml
<CustomField>
    <fullName>Episode_No__c</fullName>
    <formula>Episode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Episode No</label>
    <type>Text</type>
</CustomField>