unpackaged/main/default/objects/Service__c/fields/Episode_Type__c.field-meta.xml
<CustomField>
    <fullName>Episode_Type__c</fullName>
    <formula>Episode__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Episode Type</label>
    <type>Text</type>
</CustomField>