unpackaged/main/default/objects/Service__c/fields/Family_History_Cardiovascular_Disease__c.field-meta.xml
<CustomField>
    <fullName>Family_History_Cardiovascular_Disease__c</fullName>
    <label>Family History-Cardiovascular Disease?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>