unpackaged/main/default/objects/Service__c/fields/Firearm_Notification_Lodged__c.field-meta.xml
<CustomField>
    <fullName>Firearm_Notification_Lodged__c</fullName>
    <label>Firearm Notification Lodged?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>