unpackaged/main/default/objects/Service__c/fields/Firearm_Weapon_Safety_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Firearm_Weapon_Safety_Concerns__c</fullName>
    <label>Firearm / Weapon Safety Concerns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>