unpackaged/main/default/objects/Service__c/fields/Has_FamiliesSA_been_notified__c.field-meta.xml
<CustomField>
    <fullName>Has_FamiliesSA_been_notified__c</fullName>
    <label>Has FamiliesSA been notified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>