unpackaged/main/default/objects/Service__c/fields/Height_m__c.field-meta.xml
<CustomField>
    <fullName>Height_m__c</fullName>
    <label>Height (m)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>