unpackaged/main/default/objects/Service__c/fields/Is_Draft__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Draft?</label>
    <type>Checkbox</type>
</CustomField>