unpackaged/main/default/objects/Service__c/fields/Life_on_a_good_day__c.field-meta.xml
<CustomField>
    <fullName>Life_on_a_good_day__c</fullName>
    <label>Life on a good day</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>