unpackaged/main/default/objects/Service__c/fields/Manual_Pulse__c.field-meta.xml
<CustomField>
    <fullName>Manual_Pulse__c</fullName>
    <label>Manual Pulse</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>