unpackaged/main/default/objects/Service__c/fields/Menstural_Periods_Ceased_or_Irregular__c.field-meta.xml
<CustomField>
    <fullName>Menstural_Periods_Ceased_or_Irregular__c</fullName>
    <label>Menstural Periods Ceased or Irregular?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>