unpackaged/main/default/objects/Service__c/fields/Mental_Status_Examination__c.field-meta.xml
<CustomField>
    <fullName>Mental_Status_Examination__c</fullName>
    <defaultValue>&quot;Appearance&quot; &amp;  BR() &amp;
&quot;*Behaviour: &quot; &amp;  BR() &amp;
&quot;*Mood: &quot; &amp;  BR() &amp;
&quot;*Speech: &quot; &amp;  BR() &amp;
&quot;*Affect: &quot; &amp;  BR() &amp;
&quot;*Thought (form and content): &quot; &amp;  BR() &amp;
&quot;*Perception: &quot; &amp;  BR() &amp;
&quot;*Cognition function: &quot; &amp;  BR() &amp;
&quot;*Insight: &quot; &amp;  BR() &amp;
&quot;*Judgement: &quot; &amp;  BR() &amp;
&quot;*Rapport: &quot; &amp;  BR() &amp; BR() &amp;

&quot;Neurovegetative Symptoms &quot; &amp;  BR() &amp;
&quot;*Sleep: &quot; &amp;  BR() &amp;
&quot;*Concentration: &quot; &amp;  BR() &amp;
&quot;*Energy: &quot; &amp;  BR() &amp;
&quot;*Appetite: &quot; &amp;  BR() &amp;
&quot;*Weight: &quot;</defaultValue>
    <label>Mental Status Examination</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>