unpackaged/main/default/objects/Service__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to face</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Written</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>