unpackaged/main/default/objects/Service__c/fields/Other_Registered_Clients_Involved__c.field-meta.xml
<CustomField>
    <fullName>Other_Registered_Clients_Involved__c</fullName>
    <label>Other Registered Clients Involved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>