unpackaged/main/default/objects/Service__c/fields/Physical_Health_Comments__c.field-meta.xml
<CustomField>
    <fullName>Physical_Health_Comments__c</fullName>
    <label>Physical Health Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>