unpackaged/main/default/objects/Service__c/fields/Please_Enter_NAD_or_Comments__c.field-meta.xml
<CustomField>
    <fullName>Please_Enter_NAD_or_Comments__c</fullName>
    <label>Please Enter NAD or Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>