unpackaged/main/default/objects/Service__c/fields/Pulse_Characteristic__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Characteristic__c</fullName>
    <label>Pulse Characteristic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Irregular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>