unpackaged/main/default/objects/Service__c/fields/Random_BGL_mmoll__c.field-meta.xml
<CustomField>
    <fullName>Random_BGL_mmoll__c</fullName>
    <label>Random BGL (mmol/l)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>