unpackaged/main/default/objects/Service__c/fields/Recommendation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Plan__c</fullName>
    <label>Recommendation Plan</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>