unpackaged/main/default/objects/Service__c/fields/Respiration_per_minute__c.field-meta.xml
<CustomField>
    <fullName>Respiration_per_minute__c</fullName>
    <label>Respiration (per minute)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>