unpackaged/main/default/objects/Service__c/fields/Risk_Summary_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Summary_Assessment__c</fullName>
    <label>Risk Summary / Assessment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>