unpackaged/main/default/objects/Service__c/fields/SaO2__c.field-meta.xml
<CustomField>
    <fullName>SaO2__c</fullName>
    <label>SaO2%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>