unpackaged/main/default/objects/Service__c/fields/Significant_Others_Parent_Carer__c.field-meta.xml
<CustomField>
    <fullName>Significant_Others_Parent_Carer__c</fullName>
    <label>Significant Others / Parent / Carer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>