unpackaged/main/default/objects/Service__c/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <label>Situation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>