unpackaged/main/default/objects/Service__c/fields/Stuned_Growth_or_Delayed_Puberty__c.field-meta.xml
<CustomField>
    <fullName>Stuned_Growth_or_Delayed_Puberty__c</fullName>
    <label>Stuned Growth or Delayed Puberty?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>