unpackaged/main/default/objects/Service__c/fields/Suicide_Self_Harm_Assessed_Level__c.field-meta.xml
<CustomField>
    <fullName>Suicide_Self_Harm_Assessed_Level__c</fullName>
    <label>Suicide / Self Harm (Assessed Level)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High - Frequent, Intense, Enduring</fullName>
            </value>
            <value>
                <fullName>Low - Mild, Limited, Frequency and Intensity</fullName>
            </value>
            <value>
                <fullName>Medium - Frequent, Limitedintensity and Duration</fullName>
            </value>
            <value>
                <fullName>No Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>