unpackaged/main/default/objects/Service__c/fields/Suicide_Self_Harm_Category_Level__c.field-meta.xml
<CustomField>
    <fullName>Suicide_Self_Harm_Category_Level__c</fullName>
    <label>Suicide / Self Harm (Category Level)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Suicide_Self_Harm_Assessed_Level__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Acute - Crisis Situation, Sig. Stressors and Symptoms</fullName>
            </value>
            <value>
                <fullName>Chronic - No Crisis, No Significant Stressors</fullName>
            </value>
            <value>
                <fullName>Imminent - Extreme Crisis, Relevant for ED/Acute</fullName>
            </value>
            <value>
                <fullName>Acute Exacerbation - Chronic Risk With a Crisis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>