unpackaged/main/default/objects/Service__c/fields/Time_Taken_minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_minutes__c</fullName>
    <label>Time Taken (minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>