unpackaged/main/default/objects/Service__c/fields/Waist_Circumference_cm__c.field-meta.xml
<CustomField>
    <fullName>Waist_Circumference_cm__c</fullName>
    <label>Waist Circumference (cm)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>