unpackaged/main/default/objects/Service__c/fields/Was_SAPOL_present_at_this_Contact__c.field-meta.xml
<CustomField>
    <fullName>Was_SAPOL_present_at_this_Contact__c</fullName>
    <label>Was SAPOL present at this Contact?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>