unpackaged/main/default/objects/Service__c/fields/Was_this_Bushfire_Related__c.field-meta.xml
<CustomField>
    <fullName>Was_this_Bushfire_Related__c</fullName>
    <label>Was this Bushfire Related?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>