unpackaged/main/default/objects/Service__c/fields/Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_kg__c</fullName>
    <label>Weight (kg)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>